--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "mongoose": "^9.1.1",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
